Removed another layout bug.

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
 
-.plan_title {
+.capitalize {
     text-transform: capitalize;
 }
 
